# KIE-MCP

./: .env.example  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/kie_mcp/: __init__.py  catalog.py  client.py  config.py  errors.py  server.py  webhook.py
src/kie_mcp/data/: __init__.py  docs_catalog.b85
tests/: test_catalog.py  test_client.py  test_webhook.py
