[build-system]
requires = ["hatchling>=1.25", "editables>=0.3"]
build-backend = "hatchling.build"

[project]
name = "kie-mcp"
version = "0.1.0"
description = "Model Context Protocol server for the KIE AI API"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "KIE-MCP contributors" }]
dependencies = [
  "mcp>=1.27,<2",
  "httpx>=0.27,<1",
  "pydantic>=2.7,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-asyncio>=0.24,<1",
  "ruff>=0.9,<1",
]

[project.scripts]
kie-mcp = "kie_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kie_mcp"]

[tool.hatch.build]
include = [
  "src/kie_mcp/data/docs_catalog.b85",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
